<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:ndroid="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:id="@+id/sclDetail"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fadeScrollbars="true"
       >

        <LinearLayout
            android:id="@+id/lytContent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <EditText
                android:id="@+id/edtName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@color/blue"
                android:hint="@string/your_name"
                android:textColorHint="@color/skyblue"
                android:inputType="textCapWords"
                android:padding="7dp"
                android:textSize="14sp" >
            </EditText>

            <EditText
                android:id="@+id/edtAlamat"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:ems="10"
                android:hint="@string/address"
                android:textColor="@color/blue"
                android:inputType="textPostalAddress"
                android:padding="7dp"
                android:textSize="14sp" >
            </EditText>

            <EditText
                android:id="@+id/edtKota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint= "@string/city"
                android:textColorHint="@color/skyblue"
                android:textSize="14sp"
                android:textColor="@color/blue"
                android:ems="10">
            </EditText>

            <EditText
                android:id="@+id/edtProvinsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/province"
                android:textSize="14sp"
                android:textColor="@color/blue"
                android:textColorHint="@color/skyblue"
                android:ems="10" >
            </EditText>

            <EditText
                android:id="@+id/edtPhone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textColor="@color/blue"
                android:textColorHint="@color/skyblue"
                android:padding="7dp"
                android:textSize="14sp" >
            </EditText>

            <EditText
                android:id="@+id/edtOrderList"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:enabled="false"
                android:gravity="top|left"
                android:textColor="@color/blue"
                android:textColorHint="@color/skyblue"
                android:hint="@string/order_list"
                android:inputType="textMultiLine"
                android:padding="7dp"
                android:textSize="14sp" >
            </EditText>

            <EditText
                android:id="@+id/edtEmail"
                android:textColorHint="@color/skyblue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textColor="@color/blue"
                android:ems="10"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="7dp"
                android:textSize="14sp" >
            </EditText>

            <EditText
                android:id="@+id/edtComment"
                android:layout_width="fill_parent"
                android:textColorHint="@color/skyblue"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="top|left"
                android:textColor="@color/blue"
                android:hint="@string/add_comment"
                android:inputType="textMultiLine"
                android:padding="7dp"
                android:textSize="14sp" >
            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal">

                <Button
                    android:id="@+id/btnDate"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"

                    android:background="@color/purple_color"
                    android:text="@string/date"
                    android:textColor="@color/text"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btnTime"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:background="@color/purple_color"
                    android:text="@string/time"
                    android:textColor="@color/text"
                    android:textSize="14sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="We deliver within 3 days. User can put Appointment Delivery time
(Self set date Should be more than 3 days from odering day)"
                    android:layout_marginBottom="20dp"
                    android:id="@+id/textView" />

            </LinearLayout>




            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:id="@+id/btnSend"
                    style="@style/btnSelection"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:onClick="onCOD"
                    android:layout_gravity="right"
                    android:textColor="@color/text"
                    android:text="Pay at Delivery" />


                <TextView
                    android:id="@+id/btnPayPal"
                    style="@style/btnSelection"
                    android:layout_width="180dp"
                    android:onClick="onPayPal"
                    android:clickable="true"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:textColor="@color/text"
                    android:layout_alignParentRight="true"
                    android:text="Pay with PayPal/Card" /></RelativeLayout>
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/txtAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/alert"
        android:textSize="14sp"
        android:visibility="gone" />

</RelativeLayout>