<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
   >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <RelativeLayout
            android:id="@+id/con"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:background="#eeeeee">

            <FrameLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

            </FrameLayout>
            <ScrollView

                android:scrollbars="none"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:nestedScrollingEnabled="true"
                android:id="@+id/mainscoll">

                <RelativeLayout
                    android:id="@+id/relativeLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <FrameLayout
                        android:focusableInTouchMode="true"
                        android:layout_width="match_parent"
                        android:layout_height="305dp"
                        android:layout_marginTop="10dp"
                        android:id="@+id/viewpager"
                        android:background="@drawable/textbackground"
                        >
                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp">
                            <TextView
                                android:id="@+id/shoplistz"
                                android:text="@string/best_selling"
                                android:textSize="19sp"
                                android:layout_width="wrap_content"
                                android:textAppearance="@style/main"
                                android:layout_alignParentLeft="true"
                                android:layout_height="wrap_content"
                                android:textColor="@color/hint_color_green"
                                />
                            <TextView
                                android:textColor="@color/hint_color_green"
                                android:id="@+id/shoplisttext"
                                android:onClick="viewallshops"
                                android:text="@string/view_all"
                                android:textSize="15sp"
                                android:layout_width="wrap_content"
                                android:textAppearance="@style/main"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentTop="true"
                                android:layout_height="wrap_content"
                                />
                        </RelativeLayout>
                        <android.support.v4.view.ViewPager
                            xmlns:android="http://schemas.android.com/apk/res/android"
                            android:layout_marginBottom="5dp"
                            android:id="@+id/pager"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="52dp"
                            android:gravity="center"
                            android:paddingLeft="30dp"
                            android:paddingRight="30dp"
                            />
                        <ProgressBar
                            android:id="@+id/shopviewpager"
                            android:visibility="invisible"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center"
                            />

                    </FrameLayout>
                    <FrameLayout
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="395dp"
                        android:background="@drawable/textbackground"
                        android:id="@+id/categorygrid"
                        android:layout_below="@+id/viewpager"
                        >

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp">
                            <TextView
                                android:id="@+id/catlistz"
                                android:text="@string/mens"
                                android:textSize="19sp"
                                android:layout_width="wrap_content"
                                android:textAppearance="@style/main"
                                android:layout_alignParentLeft="true"
                                android:layout_height="wrap_content"
                                android:textColor="@color/hint_color_green"
                                />
                            <TextView

                                android:id="@+id/categorygridtext"
                                android:onClick="viewallcategories"
                                android:text="@string/view_all"
                                android:textSize="15sp"
                                android:layout_width="wrap_content"
                                android:textAppearance="@style/main"
                                android:layout_alignParentRight="true"
                                android:layout_alignParentTop="true"
                                android:layout_height="wrap_content"
                                android:textColor="@color/hint_color_green"
                                />
                        </RelativeLayout>

                        <GridView
                            android:id="@+id/categorygridview"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:numColumns="3"
                            android:layout_marginTop="52dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"

                            />
                        <ProgressBar
                            android:id="@+id/grid"
                            android:visibility="invisible"
                            android:layout_gravity="center"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            />
                    </FrameLayout>

                    <TextView
                        android:text="@string/womens"
                        android:id="@+id/labels"
                        android:layout_below="@+id/categorygrid"
                        android:textSize="19sp"
                        android:layout_marginTop="10dp"
                        android:layout_width="wrap_content"
                        android:textAppearance="@style/main"
                        android:layout_alignParentLeft="true"
                        android:layout_height="wrap_content"
                        android:textColor="@color/hint_color_green"
                        />
                    <FrameLayout
                        android:layout_marginTop="15dp"
                        android:layout_width="match_parent"
                        android:layout_height="1400dp"
                        android:background="@drawable/textbackground"
                        android:id="@+id/productgrid"
                        android:layout_below="@+id/labels"
                        >
                        <GridView
                            android:id="@+id/productgridview"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:numColumns="2"
                            android:layout_marginTop="50dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="5dp"

                            />
                        <ProgressBar
                            android:visibility="invisible"
                            android:id="@+id/pgrid"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:layout_gravity="center"
                            />
                    </FrameLayout>
                </RelativeLayout>

            </ScrollView>
        </RelativeLayout>
        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/search_bar"
            android:focusable="false"
            android:iconifiedByDefault="false"
            android:inputType="textCapWords"
            android:visibility="gone" />

        <ListView
            android:id="@+id/suggestionListView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/searchView"
            android:layout_alignRight="@+id/searchView"
            android:layout_below="@+id/searchView"
            android:layout_marginTop="2dp"
            android:background="@android:color/white"
            android:visibility="gone" />
        <View
            android:id="@+id/blankLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/filter_background_shadow_color"
            android:clickable="true"
            android:visibility="gone" />
    </RelativeLayout>

    <fragment
        android:id="@+id/navigation_drawer"
        android:name="com.trending.trending_bucket.fragment.NavigationDrawerFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:layout_marginLeft="@dimen/value_30dp"
        tools:layout="@layout/fragment_navigation_drawer" />
</android.support.v4.widget.DrawerLayout>


